# gitea-mcp-server

./: .dockerignore  .env.dev.local  .env.example  .gitignore  AGENTS.md  AGENT_GUIDELINES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  check_annotations.py  cli.sh  docker-compose.gitea.yml  gitea_dev_start.sh  mcp_extensions.yaml  mcp_extensions.yaml.example  pyproject.toml  run.sh  run_mcp_server.sh  show_annotations.py
.gitea/workflows/: ci.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AGENT_INSTRUCTIONS_STANDARDS.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_STANDARDS.md  INDEX.md  SCOPE_MODEL.md  TESTING_STANDARDS.md  THOUGHTS.md  TOOL_ANNOTATIONS.md  TRANSPORT.md
gitea_mcp_client/: __main__.py  cli.py  session.py  transport.py
gitea_mcp_server/: __init__.py  cache_invalidation.py  client.py  config.py  constants.py  docs_tools.py  exceptions.py  format.py  label_manager.py  label_service.py  mcp_tools.py  models.py  openapi_converter.py  openapi_types.py  pagination.py  resource_registry.py  resources.py  scope.py  search.py  server.py  tool_filter.py  unified_search.py  validation.py
gitea_mcp_server/docs/: agent_instructions.md
gitea_mcp_server/openapi_converter/: __init__.py  core.py  schema.py
gitea_mcp_server/resources/: __init__.py  auto.py  custom.py  factory.py  format.py  registry.py  scope.py
gitea_mcp_server/server_setup/: bm25_search.py  http_server.py  label_manager.py  mcp_builder.py  mcp_extensions.py  namespace.py  permissions.py  resource_registry.py  resource_setup.py  spec_loader.py  tool_annotator.py  tool_customize.py  tool_errors.py  tool_examples.py  tool_labels.py  tool_schemas.py  tool_search.py
gitea_mcp_server/tools/: __init__.py  customize.py  display.py  errors.py  examples.py  exclusion.py  exclusions.py  extensions_metadata.py  filter_info.py  label_transform.py  labels.py  namespace.py  registry.py  schemas.py  search.py  type_info.py  virtual_params.py
scripts/: compare_converter.py
src/gitea_mcp_server/: __init__.py  cache_invalidation.py  client.py  config.py  constants.py  exceptions.py  logging_config.py  mcp_tools.py  openapi_converter.py  resource_registry.py  resources.py  server.py  tool_filter.py  validation.py
tests/: conftest.py  manual_test_cache_invalidation.py  swagger.v1.json
tests/integration/: __init__.py  conftest.py  test_cache_invalidation.py  test_conftest_smoke.py  test_exclusions.py  test_http_transport.py  (+10 more)
(+80 files in other folders)
