[project]
name = "gitea-mcp-server"
version = "0.1.0"
description = "MCP server for Gitea/Forgejo API using FastMCP 2.0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Peter", email = "peter@example.com" }
]
dependencies = [
    "fastmcp>=3.2.0,<4",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
gitea-mcp = "gitea_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitea_mcp_server"]

[tool.hatch.build]
include = ["gitea_mcp_server/docs/agent_instructions.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.extend-select = ["I", "UP", "ASYNC", "BLE", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "INP", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TCH", "ARG", "PTH", "PD", "PL", "TRY", "NPY", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "PLC0415", "F841", "RUF043"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tenacity"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.8",
    "jsonschema>=4.23.0",
]

[tool.coverage.run]
source = ["gitea_mcp_server"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod"
]
